Drop the old examples
The new ones are similar in functionality and properly use the
waltham API, unlike the old ones.

Rename the new examples to client and server at the same time,
as those names are now free and are more obvious.

Signed-off-by: Emilio Pozuelo Monfort <emilio.pozuelo@collabora.co.uk>

--- a/README
+++ b/README
@@ -22,10 +22,10 @@ $ ./autogen.sh
 $ make
 
 To test, first start the server:
-$ ./tests/sapiex
+$ ./tests/server
 
 Then in another terminal, run the client:
-$ ./tests/capiex
+$ ./tests/client
 
 The client does a wth_display.sync, waits for the answer, and exits.
 
