test server: send errors before crashing
Most of these cases would lead to a crash anyway, so send protocol error
messages first. This way things can be at least traced.

Proper error management would require support from Waltham, but that
will come much later. Add notes on which way we should probably be
going.

Signed-off-by: Pekka Paalanen <pekka.paalanen@collabora.co.uk>

--- a/TODO
+++ b/TODO
@@ -11,6 +11,8 @@ general:
 - implement server-side object allocation
 - implement protocol version negotiation
 - add listening socket API (usefulness?)
+- error delivery: see the comments in object_post_error() in
+  tests/server-api-example.c
 
 generator:
 - data type: autogenerate the foo_sz arg
