test client: add a timer to fiddle with regions
To make the test client more interesting, add a timer that will
periodically do some protocol excercise.

Now the client runs for 5 seconds before it quits.

Signed-off-by: Pekka Paalanen <pekka.paalanen@collabora.co.uk>

--- a/TODO
+++ b/TODO
@@ -30,3 +30,6 @@ tests/examples:
 - fix server read error when client disconnects
 - make the examples use more protocol and document better
 - write a test suite
+
+build:
+- check for timerfd in configure
