TODO: add a note to unify the libs
It might make sense to build just one libwaltham for both server and
client. Much of the code is shared, and the amount of client-specific
and server-specific code should eventually be very small.

Signed-off-by: Pekka Paalanen <pekka.paalanen@collabora.co.uk>

--- a/TODO
+++ b/TODO
@@ -33,3 +33,4 @@ tests/examples:
 
 build:
 - check for timerfd in configure
+- build just one libwaltham, no need for separate server and client libs
