TODO: should have 64-bit data type too
Wayland is missing this and due to ABI stability cannot even add it,
which means protocols needing 64-bit types need to use two 32-bit
arguments. Quite a pain.

Signed-off-by: Pekka Paalanen <pekka.paalanen@collabora.co.uk>

--- a/TODO
+++ b/TODO
@@ -16,6 +16,7 @@ general:
   the hash table
 - implement object version inheritance
 - wth_connection needs user_data with getter and setter
+- add 64-bit protocol data types
 
 generator:
 - rewrite the generator to become more readable and maintainable
