--- a/TODO
+++ b/TODO
@@ -24,6 +24,7 @@ generator:
 - generate <object type>_get_version()
 - generate enums
 - generate SINCE macros (interface version adding the message)
+- generate documentation for Doxygen
 
 serialiser:
 - implement send-buffering (non-blocking sending)
