TODO: wth_map functions are unchecked
Signed-off-by: Pekka Paalanen <pekka.paalanen@collabora.co.uk>

--- a/TODO
+++ b/TODO
@@ -16,6 +16,7 @@ general:
 - figure out and document if recursive dispatch is allowed or not
   (calling wth_connection_dispatch() from a handler called by
   wth_connection_dispatch())
+- handle errors from wth_map functions
 
 generator:
 - rewrite the generator to become more readable and maintainable
